# studia

./: .gitignore  BAZA3_analise_fundamentalista_valuation.xlsx  CLAUDE.md  DESIGN.md  FLASHCARD_GUIDE.md  Relatório: Construindo uma Solução sobre a API da Interactive Brokers (IBKR).md  TAREFA-multiusuario-dashboard.md  build.sh  consolidar_geope.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  flashcard-to-import.md  flashcard.html
services/scraper/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  RUN-SSH.md  docker-compose.prod.yml  pyproject.toml
services/scraper/app/: auth.py  client.py  config.py  discovery.py  main.py  observability.py  persistir.py  schemas.py  state.py  textmd.py
services/scraper/app/scrapers/: tc_comentarios.py  tc_concursos.py  tc_gabarito.py  tc_guia.py  tc_imprimir.py  tc_total.py  tecconcursos.py
services/scraper/app/tasks/: caderno.py  comentarios.py  concursos.py  dummy.py  enqueue.py  idempotency.py  imagens.py  ledger.py  planning.py  smoke.py
services/scraper/discovery/: comentarios_contract.md
services/scraper/scripts/: cadernos_petrobras.json  download_imagens.py  intercept_caderno.py  intercept_guia.py  intercept_guias_busca.py  intercept_imprimir.py  intercept_pasta.py  probe_caderno.py  probe_guia_api.py  probe_pasta.py  scrape_lote.py  test_tc_access.py
services/scraper/tests/: test_caderno_membership.py  test_comentario_ledger_fns.py  test_comentario_ledger_schema.py  test_comentario_pause_ledger.py  test_comentarios_worker.py  test_comentarios_worker_pause_retry.py  test_derivar_status.py  test_enqueue_comentarios_route.py  test_fetch_page_session.py  test_ledger_concursos.py  test_supervisor_comentarios.py  test_taskiq_caderno_execution.py  test_taskiq_imagens.py  test_taskiq_planning.py  test_tasks_concursos.py  test_tc_auth_credentials.py  test_tc_comentarios.py  test_tc_concursos.py  test_tc_guia.py  test_textmd_latex.py
services/scraper/tests/fixtures/: coment_alunos_sample.json  (+1 more)
(+351 files in other folders)
